@@ -52,6 +52,8 @@ Changes since version 1.6-6
   * summary.piest: heading now has "z-value" and "Pr(>|z|)" as the numbers are based
                    on the standard normal distribution.
   * cosmetic: some print functions now have better aligned whitespacing.
+  * ranef.plm added (non-exported): initial work on a function to extract the random
+                                    effects from a random effects model object.
 
 
 Changes since version 1.6-5
